[package]
name = "brelok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ssh2 = "0.9.3"
owo-colors = "3.3.0"
clap = { version = "3.1.10", features = ["derive", "cargo", "env", "unicode"] }
clap_complete = "3.1.3"
miette = { version = "4.5.0", features = ["fancy", "owo-colors", "supports-color", "supports-hyperlinks", "textwrap"] }
env_logger = "0.9.0"
nix = "0.24.1"
anyhow = "1.0.57"
